# ducklake

./: .env.example  .env.example.aws  .gitignore  README.md  deno.json  duckdb.ts  main.py  pyproject.toml
deno/: deno.json  test_duckdb.ts  test_duckdb_wasm.ts
deno/supabase/: config.toml
deno/supabase/functions/hello-world/: deno.json  main.ts
deno/supabase/functions/hello-world-wasm/: deno.json  main.ts
python/: README.md  main.py  pyproject.toml
python/clickbench/: README.md  admin.sql  benchmark.py  benchmark.sh  chart.py  convert_clickbench.py  queries.sql  rename_table.py  run.sh  seed.py
supabase/functions/hello-world/: deno.json  main_test.ts
supabase/functions/hello-world-wasm/: deno.json  main.ts
